# ncnr-event-processing

./: .gitignore  CODEMETA.yaml  CODEOWNERS  README.md  pyproject.toml  requirements.txt
event_processing/rebinning_api/: client.py  event_capture.py  models.py  nexus_util.py  pydantic_numpy.py  rebin_vsans_old.py  serial.py  server.py
event_processing/rebinning_client/: demo.py
event_processing/rebinning_client/web-client/: package.json  quasar.config.js
event_processing/rebinning_client/web-client/src/: numpy_array.ts  store.ts
event_processing/rebinning_client/web-client/src/components/: DatafilesTable.vue  ExperimentsTable.vue  RebinningParams.vue
event_processing/rebinning_client/web-client/src/layouts/: RebinLayout.vue
event_processing/rebinning_client/web-client/src/pages/: RebinDemoPage.vue
event_processing/rebinning_client/web-client/src/router/: routes.ts
rebinning_api/: client.py  data_cache.py  models.py  pydantic_numpy.py  serial.py  server.py
rebinning_client/: demo.py
restream_vsans/: README.md  cache.py  cache_db.py  cache_flat.py  cache_flat_confluent.py  cache_hdf.py  consumer.c  device.avsc  fast_reader.py  get_eventfiles.py  measurement_config.avsc  neutron_packet.avsc  neutron_test.ini  ng7reader.py  read_vsans_events_class.py  reader.py  rebin.py  restream.py  timing.avsc
