[project]
name = "event_processing"
description = "Tools for processing and visualizing event streams from NCNR instruments"
version = "0.0.1"
authors = [
    { name = "Paul Kienzle", email = "paul.kienzle@nist.gov" },
    { name = "Brian Maranville", email = "brian.maranville@nist.gov" }
]
dependencies = [
    "fastapi",
    "h5py",
    "msgpack",
    "numpy",
    "requests",
    "plotly",
    "nicegui"
]

[project.optional-dependencies]
dev = [
]

[build-system]
requires = ["setuptools>=61.2"]

[tool.setuptools.packages.find]
include = ["event_processing"]
